...
    }
    
    
    
    override func setEditing(_ editing: Bool, animated: Bool) {
        
        if self.editButtonItem.title == "Edit" {
            self.editButtonItem.title = "Done"
            self.mTableView.setEditing(true, animated: true)
            
        } else {
            self.editButtonItem.title = "Edit"
            self.mTableView.setEditing(false, animated: false)
        }
...
